# sport-analytics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  issues.jsonl  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_practiscore_tables.py
app/: database.py  exceptions.py  limiter.py  logging_config.py  main.py  validation.py
app/models/: __init__.py  classifier_result.py  current_classification.py  division.py  match_result.py  member.py  practiscore_match.py  practiscore_result.py
app/routes/: __init__.py  members.py  pages.py
app/services/: analytics_engine.py  cache.py  practiscore_scraper.py  task_manager.py  uspsa_match_scraper.py  uspsa_scraper.py
app/static/js/: base.js  dashboard.js  index.js
app/templates/: base.html  dashboard.html  index.html
tests/: conftest.py  test_analytics_engine.py  test_cache.py  test_exceptions.py  test_practiscore_scraper.py  test_routes.py  test_routes_practiscore.py  test_task_manager.py  test_task_manager_practiscore.py  test_uspsa_match_scraper.py  test_uspsa_scraper.py  test_validation.py
