[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sport-analytics"
version = "0.1.0"
description = "USPSA analytics application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "playwright>=1.44.0",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
